--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,13 @@
     tools:context=".activities.LoginActivity" >
 
     <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.LoginActivity"
-        android:layout_margin="60dp">
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="60dp"
+        tools:context=".activities.LoginActivity">
 
         <EditText
             android:id="@+id/etUsername"
@@ -38,18 +39,36 @@
             android:layout_marginBottom="50dp"
             android:contentDescription="Password"
             android:hint="password"
-            tools:text="Password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            tools:text="Password" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="300dp"
-            android:text="Button" />
+            android:layout_marginBottom="198dp"
+            android:text="Log In"
+            app:iconTint="#2196F3"
+            tools:drawableTint="#2196F3"
+            android:backgroundTint="#2196F3"/>
+
+        <ImageView
+            android:id="@+id/ivInstagramLogo"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/etUsername"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            tools:srcCompat="@drawable/instagram_logo" />
 
     </RelativeLayout>
+
+
 
 
 </RelativeLayout>
