--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -9,7 +9,7 @@
     tools:context=".activities.FeedActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipeContainer"
+        android:id="@+id/rvUploads"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
