--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,58 +6,14 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-
     tools:context=".activities.MainActivity">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/flContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        tools:context=".activities.MainActivity">
-
-        <EditText
-            android:id="@+id/etDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Description.."
-            tools:text="Description" />
-
-        <Button
-            android:id="@+id/btnAddPicture"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/etDescription"
-            android:layout_marginTop="10dp"
-            android:text="Take Picture" />
-
-        <ImageView
-            android:id="@+id/ivPictureUpload"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_below="@+id/btnAddPicture"
-            android:layout_marginTop="10dp"
-            tools:src="@tools:sample/avatars" />
-
-        <Button
-            android:id="@+id/btnFeed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
-            android:text="Button" />
-
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/btnSubmit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="300dp"
-        android:text="Submit" />
+        android:layout_above="@+id/bottomNavigation"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
