--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -37,4 +37,11 @@
         android:layout_marginBottom="300dp"
         android:text="Submit" />
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="165dp"
+        android:visibility="invisible" />
+
 </LinearLayout>
