--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,10 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="198dp"
+            android:backgroundTint="#2196F3"
             android:text="Log In"
             app:iconTint="#2196F3"
-            tools:drawableTint="#2196F3"
-            android:backgroundTint="#2196F3"/>
+            tools:drawableTint="#2196F3" />
 
         <ImageView
             android:id="@+id/ivInstagramLogo"
@@ -59,12 +59,13 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/etUsername"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
-            tools:srcCompat="@drawable/instagram_logo" />
+            app:srcCompat="@drawable/instagram_logo" />
 
     </RelativeLayout>
 
