--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -41,7 +41,9 @@
         android:id="@+id/pbLoading"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_below="@+id/btnSubmit"
         android:layout_marginStart="165dp"
+        android:layout_marginTop="-100dp"
         android:visibility="invisible" />
 
 </LinearLayout>
