--- a/app/src/main/res/layout/fragment_evert_profile.xml
+++ b/app/src/main/res/layout/fragment_evert_profile.xml
@@ -7,21 +7,23 @@
 
     <ImageView
         android:id="@+id/ivEveryProfile"
-        android:layout_width="140dp"
-        android:layout_height="110dp"
-        android:layout_above="@+id/rvGridPostsEveryProfile"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_below="@+id/tvUsernameEveryProfile"
         android:layout_alignParentStart="true"
         android:layout_marginStart="31dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="75dp"
+        android:scaleType="fitXY"
         tools:src="@tools:sample/avatars" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGridPostsEveryProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/ivEveryProfile"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:padding="8dp" />
 
     <TextView
