--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,26 +17,29 @@
         android:id="@+id/ivProfile"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_above="@+id/rvGridPosts"
+        android:layout_below="@+id/tvUsernameProfile"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="141dp"
+        android:layout_marginTop="10dp"
         tools:src="@tools:sample/avatars" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGridPosts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/ivProfile"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:padding="8dp" />
 
     <TextView
         android:id="@+id/tvUsernameProfile"
         android:layout_width="107dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/ivProfile"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="16dp"
         android:text="Username"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
